# gol_opengl

./: CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: fragment.fs  vertex.vs
src/: main.cpp  shader.cpp  shader.hpp
